# Audio-5D

./: .env  .gitignore  README.md  app.py  audio_processor.py  main.py  pyproject.toml  requirements.txt  story.txt  story2.txt
ffmpeg-master-latest-win64-gpl-shared/include/libavutil/: ffversion.h
static/: main.css
templates/: index.html
